# django_edu

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py  0005_alter_author_name.py  0006_alter_article_options_alter_author_options_and_more.py
mysite/blogapp/templates/blogapp/: article-details.html  articles.html  base.html  create-article.html  (+3 more)
mysite/myapiapp/: serializers.py  views.py
mysite/myauth/: models.py  urls.py  validators.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  shopapp_mixins.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: content-type-fixture.json  group-permissions-fixture.json  groups-fixture.json  logentry-fixture.json  order-products-fixture.json  orders-fixture.json  permissions-fixture.json  products-fixture.json  session-fixture.json  user-groups-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_user.py  0004_order_products.py  0005_alter_order_options_alter_product_options_and_more.py  0006_product_created_by.py  0007_alter_order_options_alter_product_options_and_more.py  0008_alter_product_description_alter_product_name.py
(+35 files in other folders)
