[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Яков Токарев <jackt@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.3"
django-rest-framework = "^0.1.0"
pillow = "^10.3.0"
django-debug-toolbar = "^4.4.2"
django-filter = "^24.2"
gunicorn = "^22.0.0"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
